--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Todo List App</title>
   </head>
   <body>
+    <section class="alerts-section"></section>
     <div class="modal">
       <section id="task-input-section" class="task-input modal-dialogue">
         <h2 class="task-input--title">Edit task</h2>
